--- a/avaliacaotendencias/WebContent/css/padrao.css
+++ b/avaliacaotendencias/WebContent/css/padrao.css
@@ -1,1 +1,37 @@
 @CHARSET "ISO-8859-1";
+
+
+.fotoP{
+width: 100px;
+height: 70px;
+float: left;
+margin-left: 0px;
+}
+
+.cartaoV{
+float:left;
+border: 1px solid black;
+width: 230px;
+height: 72px;
+padding: 1px;
+border-spacing :1px;
+background-color: gray;
+}
+img {
+float: left;
+width: 100px;
+height: 70px
+
+}
+
+.textoF{
+float: left;
+width: 100px;
+height: 70px;
+margin-left: 7%;
+margin-top: -5%;
+}
+p{
+width: 100px;
+height: 70px
+}
